re-vamped css and added text toggle

--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
     
     <div class='xcontainer'>
         <h1>Speech Text Reader</h1>
-        <button>Text</button>
+        
     </div>
 
+    <div id='xtextbox'>
+        <button id='close'>x</button>
+        <br />
+        <p>Choose Voice</p>
+        <select id='voices'></select>
+        <textarea placeholder="Enter text to read..."></textarea>
+        <button id='toggletext'>Toggle Text Box</button>
+    </div>
 
     <div class='xoutput'>
 
