--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     
     <div class='xcontainer'>
         <h1>Speech Text Reader</h1>
-        
+        <button id='togglebox'>Toggle Text Box</button>
     </div>
 
-    <div id='xtextbox'>
+    <div id='xtextbox' class='showbox'>
         <button id='close'>x</button>
         <br />
         <p>Choose Voice</p>
         <select id='voices'></select>
         <textarea placeholder="Enter text to read..."></textarea>
-        <button id='toggletext'>Toggle Text Box</button>
+        <button id='toggletext'>Read Text</button>
     </div>
 
     <div class='xoutput'>
