speech function working

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button id='togglebox'>Toggle Text Box</button>
     </div>
 
-    <div id='xtextbox' class='showbox'>
+    <div id='xtextbox' class='xtextbox'>
         <button id='close'>x</button>
         <br />
         <p>Choose Voice</p>
