--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <br />
         <p>Choose Voice</p>
         <select id='voices'></select>
-        <textarea placeholder="Enter text to read..."></textarea>
-        <button id='toggletext'>Read Text</button>
+        <textarea id='xtextarea' placeholder="Enter text to read..."></textarea>
+        <button id='readtext'>Read Text</button>
     </div>
 
     <div class='xoutput'>
